--- a/scss/_navbar.scss
+++ b/scss/_navbar.scss
@@ -71,6 +71,7 @@
     left: 0;
     height: 0%;
     background-color: $minionYellow;
+    overflow-y: hidden;
 
     a {
         display: block;
